[package]
name = "vm_validator"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra vm validator"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
config = { path = "../config" }
failure = { path = "../common/failure_ext", package = "failure_ext" }
futures = "0.1.28"
scratchpad = { path = "../storage/scratchpad" }
state_view = { path = "../storage/state_view" }
storage_client = { path = "../storage/storage_client" }
libra-types = { path = "../types" }
vm_runtime = { path = "../language/vm/vm_runtime" }

[dev-dependencies]
grpcio = { version = "=0.5.0-alpha.4", default-features = false }
rand = "0.6.5"

config-builder = { path = "../config/config-builder" }
crypto = { path = "../crypto/crypto", features = ["testing"] }
executor = { path = "../execution/executor" }
grpc_helpers = { path = "../common/grpc_helpers" }
storage-service = { path = "../storage/storage-service" }
libra-types = { path = "../types", features = ["testing"] }
vm_runtime = { path = "../language/vm/vm_runtime" }
transaction_builder = { path = "../language/transaction_builder" }
