[package]
name = "x"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra extended cargo tasks"
edition = "2018"
publish = false
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
structopt = "0.3.2"
anyhow = "1.0"
toml = "0.5.3"
