[package]
name = "admission-control-proto"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra admission control proto"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
tonic = "0.2"
tokio = { version = "0.2.13", features = ["full"] }
prost = "0.6"

grpc-types = { path = "../../grpc/types", version = "0.1.0"}
libra-logger = { path = "../../common/logger", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }

[build-dependencies]
tonic-build = "0.2"

[features]
default = []
fuzzing = ["libra-types/fuzzing"]
