[package]
name = "admission-control-service"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra admission control service"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3.5"
once_cell = "1.3.1"
rand = "0.7.3"
serde_json = "1.0"
tokio = { version = "0.2.13", features = ["full"] }
tonic = "0.2"

admission-control-proto = { path = "../admission-control-proto", version = "0.1.0" }
libra-config = { path = "../../config", version = "0.1.0" }
libra-crypto = { path = "../../crypto/crypto", version = "0.1.0" }
libra-logger = { path = "../../common/logger", version = "0.1.0" }
libra-mempool = { path = "../../mempool", version = "0.1.0"}
libra-metrics = { path = "../../common/metrics", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }
libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }
debug-interface = { path = "../../common/debug-interface", version = "0.1.0" }
storage-interface = { path = "../../storage/storage-interface", version = "0.1.0" }

[dev-dependencies]
assert_matches = "1.3.0"
libra-types = { path = "../../types", version = "0.1.0", features = ["fuzzing"] }
vm-validator = { path = "../../vm-validator", version = "0.1.0" }

[features]
default = []
