[package]
name = "admission-control-proto"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra admission control proto"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "0.4.12"
tonic = { git = "https://github.com/hyperium/tonic.git" }
tokio = { version = "0.2", features = ["full"] }
prost = "0.5.0"

libra-logger = { path = "../../common/logger", version = "0.1.0" }
libra-mempool-shared-proto = { path = "../../mempool/mempool-shared-proto", version = "0.1.0" }
libra-types = { path = "../../types", version = "0.1.0" }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic.git" }

[features]
default = []
fuzzing = ["libra-types/fuzzing"]
